Open-MX 1.1.0
=========================================================

Improvements from previous release:
* Add support for architectures with page size different from 4kB.
* Improve MTU=9000 support by using 8kB fragments for medium messages
  as well.
* Add a new optional medium send path relying on page pinning and
  fragmented DMAs instead of page copy and large contigous socket
  buffers.
* Add an optional kernel-based memory pinning cache invalidation
  support through MMU-notifier (starting with Linux kernel 2.6.27),
  enable OMX_RCACHE by default when supported.
* Add udev support by installing a rules file in omx_local_install
  and not overriding udev work when the environment looks sane.
* The loopback interface hostname is now automatically set to
  'localhost'.
* Enable driver status retrieval by reading /dev/open-mx.
* Allow probing across multiple ctxids.
* Miscellaneous small improvements and cleanups all over the place.

Caveats:
* No background progression or retransmission is done if the application
  does not invoke an Open-MX routine explicitly.

Open-MX 1.0.5 (January 29th 2009, svn/open-mx-1.0.x r2301)
==========================================================
The OpenMPI 1.3 release.

Bug fixes:
* Extend the MX ABI compatibility with some internal symbols that
  OpenMPI requires.

Open-MX 1.0.4 (January 9th 2009, svn/open-mx-1.0.x r2244)
=========================================================
Bug fixes:
* Fix management of large messages in case of many packet loss
  at the end of the message.
* Fix management of forgotten/zombie large receive requests.
* Fix support for discarding rendezvous messages within the
  unexpected handler.
* Miscellaneous internal error code management fixes.

Open-MX 1.0.3 (December 22nd 2008, svn/open-mx-1.0.x r2219)
===========================================================
Bug Fixes:
* Fix kernel timing on some 32bits architectures that could lead
  to bad retransmission or slow hostname resolution.