@@ -7,8 +7,6 @@
 * if recv_frag_length != MEDIUM_FRAG_LENGTH_MAX,
   check that frag_seqnum * MAX + frag_length = msg_length if DEBUG
 
-* cleanup the computation of packet sizes depending on the MTU in omx_wire.h
-  when not wire-compatible
 * stop supporting mtu!=1500/9000 ?
   + go back to mtu/wire-compat indep library, with send
     function pointers initialized at connect
