@@ -66,23 +66,40 @@
 # ifndef OMX_MTU
 #  error OMX_MTU should be defined in non-wire-compatible mode
 # endif
-# if OMX_MTU < 2000 /* ugly since we can't compare with 1024+sizeof(header) */
-#  define OMX_PULL_REPLY_LENGTH_MAX		(OMX_MTU-sizeof(struct omx_pkt_head)-sizeof(struct omx_pkt_pull_reply))
-#  define OMX_MEDIUM_FRAG_LENGTH_MAX		(OMX_MTU-sizeof(struct omx_pkt_head)-sizeof(struct omx_pkt_medium_frag))
-#  define OMX_MEDIUM_FRAG_LENGTH_ROUNDUPSHIFT	11 /* the power-of-two above or equal to the max length */
-# elif OMX_MTU < 3000
-#  define OMX_PULL_REPLY_LENGTH_MAX		(OMX_MTU-sizeof(struct omx_pkt_head)-sizeof(struct omx_pkt_pull_reply))
-#  define OMX_MEDIUM_FRAG_LENGTH_MAX		(OMX_MTU-sizeof(struct omx_pkt_head)-sizeof(struct omx_pkt_medium_frag))
-#  define OMX_MEDIUM_FRAG_LENGTH_ROUNDUPSHIFT	12
-# elif OMX_MTU < 5000
-#  define OMX_PULL_REPLY_LENGTH_MAX		(OMX_MTU-sizeof(struct omx_pkt_head)-sizeof(struct omx_pkt_pull_reply))
-#  define OMX_MEDIUM_FRAG_LENGTH_MAX		(OMX_MTU-sizeof(struct omx_pkt_head)-sizeof(struct omx_pkt_medium_frag))
-#  define OMX_MEDIUM_FRAG_LENGTH_ROUNDUPSHIFT	13
-# else
-#  define OMX_PULL_REPLY_LENGTH_MAX		(OMX_MTU-sizeof(struct omx_pkt_head)-sizeof(struct omx_pkt_pull_reply))
-#  define OMX_MEDIUM_FRAG_LENGTH_MAX		8192 /* FIXME: Should use OMX_MTU-sizeof(...) as above */
-#  define OMX_MEDIUM_FRAG_LENGTH_ROUNDUPSHIFT	13
-# endif
+
+/*
+ * large message fragments use the full MTU all the time if non-wire compatible mode.
+ */
+#define OMX_PULL_REPLY_PAYLOAD_OF_MTU(x) (x-sizeof(struct omx_pkt_head)-sizeof(struct omx_pkt_pull_reply))
+#define OMX_PULL_REPLY_LENGTH_MAX OMX_PULL_REPLY_PAYLOAD_OF_MTU(OMX_MTU)
+
+/*
+ * As long as a packet is under 4kB, use the exact MTU-hdrlen for medium and large fragments.
+ * After 4kB, we may need more than a page, so just round to the power-of-two below (4kB or 8kB)
+ */
+#define OMX_MEDIUM_FRAG_PAYLOAD_OF_MTU(x) (x-sizeof(struct omx_pkt_head)-sizeof(struct omx_pkt_medium_frag))
+#define OMX_MEDIUM_FRAG_MTU_OF_PAYLOAD(x) (x+sizeof(struct omx_pkt_head)+sizeof(struct omx_pkt_medium_frag))
+#define OMX_MEDIUM_FRAG_LENGTH_MAX (					\
+  OMX_MEDIUM_FRAG_PAYLOAD_OF_MTU(OMX_MTU) <= 4096			\
+    ? OMX_MEDIUM_FRAG_PAYLOAD_OF_MTU(OMX_MTU)				\
+    : ( OMX_MEDIUM_FRAG_MTU_OF_PAYLOAD(8192) > OMX_MTU ? 4096 : 8192 )	\
+)
+
+/*
+ * the power-of-two above or equal to the above OMX_MEDIUM_FRAG_LENGTH_MAX.
+ * it is used to allocate sendq/recvq rings
+ */
+#define OMX_MEDIUM_FRAG_LENGTH_ROUNDUPSHIFT (			\
+  OMX_PULL_REPLY_PAYLOAD_OF_MTU(OMX_MTU) <= 1024		\
+    ? 10							\
+    : OMX_PULL_REPLY_PAYLOAD_OF_MTU(OMX_MTU) <= 2048		\
+      ? 11							\
+      : OMX_PULL_REPLY_PAYLOAD_OF_MTU(OMX_MTU) <= 4096		\
+	? 12							\
+	: OMX_MEDIUM_FRAG_MTU_OF_PAYLOAD(8192) > OMX_MTU	\
+	  ? 12							\
+	  : 13							\
+)
 
 #endif /* !OMX_MX_WIRE_COMPAT */
 
